# MAYA-HexTile

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.omc/state/: agent-replay-a46c888a-d146-4d47-92c2-9774215ccbc3.jsonl  hud-stdin-cache.json
.omc/state/checkpoints/: checkpoint-2026-06-07T14-33-37-404Z.json  checkpoint-2026-06-07T14-40-19-360Z.json
.omc/state/sessions/a46c888a-d146-4d47-92c2-9774215ccbc3/: hud-state.json  last-tool-error-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
arnold_deploy/: VMTHexTileArnold.mod
arnold_deploy/shaders/: vmtHexTile.oso
backup/v24_working_20260608/: README_POC.md
backup/v24_working_20260608/scripts/: AEVMTHexTilePocTemplate.mel
backup/v24_working_20260608/src/: VMTHexTilePoc.h  VMTHexTilePocOverride.h
backup/v24_working_20260608/test/: compute_repro.py  multiout_probe.py  setup_poc.mel  smoke_test.py  test_multiout_v17.mel  verify_fix.py  verify_v2.py  walk_dmp.py
cmake/: MayaConfig.cmake
osl/: vmtHexTile.osl  vmtHexTileOne.osl
osl/.omc/state/: agent-replay-a46c888a-d146-4d47-92c2-9774215ccbc3.jsonl
osl/.omc/state/sessions/a46c888a-d146-4d47-92c2-9774215ccbc3/: pre-tool-advisory-throttle.json  subagent-tracking-state.json
scripts/: AEVMTHexTilePocTemplate.mel  vmtHexToRedshift.py
src/: FragmentBuilder.cpp  FragmentBuilder.h  VMTHexTilePoc.cpp  VMTHexTilePoc.h  VMTHexTilePocOverride.cpp  pluginMain.cpp
src/arnold/: VMTHexTileArnold.cpp
test/: compute_repro.py  frag_probe.py  parse_dmp.py  smoke_test.py  test_multiout_v17.mel  verify_fix.py  verify_osl_arnold.mel  verify_v2.py
